<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.register.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="42sp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_auth_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/auth_prompt"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/sub_text_dark_color"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_prompt"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/raleway_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                style="@style/TextInputEditTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_email"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/raleway_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconDrawable="@drawable/ic_eye_close"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                style="@style/TextInputEditTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_consent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_password"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end">

        <CheckBox
            android:id="@+id/cb_consent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/sub_text_dark_color"
            app:paddingStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_consent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/guideline_login"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/cl_consent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt_underlined"
        android:textSize="18sp"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/sub_text_dark_color"
        app:layout_constraintTop_toTopOf="@id/guideline_login"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end" />
</androidx.constraintlayout.widget.ConstraintLayout>