<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.otpverify.OTPVerifyActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/otp_verify"
        android:textSize="42sp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_auth_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_description"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/sub_text_dark_color"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_otp_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_prompt"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_otp_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/otp_code"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/raleway_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_otp_code"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_code"
                android:inputType="number"
                android:maxLength="6"
                style="@style/TextInputEditTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cl_otp_code"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_send_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_again"
            android:textSize="14sp"
            android:textColor="@color/sub_text_dark_color"
            android:fontFamily="@font/raleway_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/sub_text_dark_color"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_send_again"
            tools:text="00:30" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>